--- a/assignment4/about.html
+++ b/assignment4/about.html
@@ -7,7 +7,9 @@
 </head>
 <body>
 	<h1>My Bio</h1>
-
+	<!--
+		YE - correct filepath, awesome
+	-->
 	<img src="img/profile.jpg" alt="profile" class="center"/>
 
 	<div>
