--- a/assignment4/resume.html
+++ b/assignment4/resume.html
@@ -10,11 +10,14 @@
 	<nav>
 		<ul>
 			<li><a href="#">Resume</a></li>
-			<li><a href="about.html">About</a></li>	
+			<li><a href="about.html">About</a></li>
 		<ul>
 	</nav>
 	-->
 
+	<!--
+		YE - this could be wrapped in a <header>
+	-->
 	<div>
 		<h1>Jeanne Nina Laurel</h1>
 		<p>jlaurel1418@gmail.com | 201.918.1904</p>
@@ -22,13 +25,25 @@
 	</div>
 	<br><br>
 
+	<!--
+		YE - not sure if <article> is the best element to use here.  Consider <section> instead
+		https://developer.mozilla.org/en-US/docs/Web/HTML/Element/article
+
+		-2pts
+	-->
 	<article>
+		<!--
+			YE - good use of <header>
+		-->
 		<header>
 			<h2>Education</h2>
 		</header>
 		<section>
 			<h3>Fordham University, New York, NY | May 2018</h3>
 			<p>Bachelor of Science in Computer Science</p>
+			<!--
+				YE - use html entity for '&' character
+			-->
 			<p>Double Minor in Mathematics & New Media and Digital Design</p>
 		</section>
 	</article>
@@ -65,7 +80,7 @@
 				<li>Develop Maaterakers website with other members of the IT team</li>
 				<li>Support the social media team by managing The AAT Project Tumblr account and responding to emails</li>
 				<li>Help the production team with brainstorming for content and filming interviews and short videos</li>
-			</ul>	
+			</ul>
 		</section>
 		<section>
 			<h3>XRC Labs - Web Development Intern</h3>
@@ -83,9 +98,9 @@
 			<ul>
 				<li>Build an iOS application project weekly</li>
 				<li>Create and develop a new iOS application with a group at the end of the 12-week bootcamp</li>
-			</ul>	
-		</section>	
-	</article>	
+			</ul>
+		</section>
+	</article>
 	<br><br>
 
 	<article>
@@ -97,7 +112,7 @@
 			<h4><i>CodePath University</i></h4>
 			<p>Cryptr uses the RSA algorithm to hash and sign plaintext messages. These messages contain information such as the name of the intended recipient, the event the ticket / ID is for, the date and an ID number. The app can also scan a QR code and verify identities as valid or invalid.</p>
 			<a href="http://www.bit.ly/git-cryptr">bit.ly/git-cryptr</a>
-		</section>	
+		</section>
 		<section>
 			<h3>Winston West Fine Art | Website</h3>
 			<h4><i>Freelance</i></h4>
@@ -132,11 +147,14 @@
 			<ul>
 				<li>Fluent in Tagalog</li>
 			</ul>
-		</section>				
-	</article>	
+		</section>
+	</article>
 	<br><br>
 
-	<a href="about.html"><h2>More About Me</h2></a>			
+	<!--
+		YE - might be good place for a <nav>
+	-->
+	<a href="about.html"><h2>More About Me</h2></a>
 
 
 </body>
