--- a/midterm/about.html
+++ b/midterm/about.html
@@ -6,8 +6,16 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<h1>My Bio</h1>
-
+	<nav>
+		<ul>
+			<li><a href="#">Resume</a></li>
+			<li><a href="about.html">About</a></li>	
+		</ul>
+	</nav>
+	<header>
+		<h1>My Bio</h1>
+	</header>
+	
 	<img src="img/profile.jpg" alt="profile" class="center"/>
 
 	<div>
@@ -17,8 +25,6 @@
 
 	<p>For further information about my professional life, please check out my <a href="http://www.jeanneninalaurel.com" target="_blank">website</a>! At the end, it has links to my social media accounts where you can probably find out a lot more about me.</p>
 	</div>
-
-	<a href="resume.html"><h2>My Resume</h2></a>
 
 </body>
 </html>
