--- a/midterm/resume.html
+++ b/midterm/resume.html
@@ -14,17 +14,20 @@
 	</nav>
 
 	<header>
-		<h1 class="center">Jeanne Nina Laurel</h1>
-		<p>jlaurel1418@gmail.com | 201.918.1904</p>
-		<a href="http://www.jeanneninalaurel.com">jeanneninalaurel.com</a>
-	<header>
+			<h1 class="center">Jeanne Nina Laurel</h1>
+			<h2>jlaurel1418@gmail.com | 201.918.1904</h2>
+			<h3><a href="http://www.jeanneninalaurel.com">jeanneninalaurel.com</a></h3>
+	</header>
 
 	<section>
-		<h2>Education</h2>
-		<h3>Fordham University, New York, NY | May 2018</h3>
-		<p>Bachelor of Science in Computer Science</p>
-		<p>Double Minor in Mathematics &amp; New Media and Digital Design</p>
-
+		<header>
+			<h2>Education</h2>
+		</header>
+		<section>
+			<h3>Fordham University, New York, NY | May 2018</h3>
+			<p>Bachelor of Science in Computer Science</p>
+			<p>Double Minor in Mathematics &amp; New Media and Digital Design</p>
+		</section>
 	</section>
 
 	<section>
@@ -44,7 +47,9 @@
 	</section>		
 
 	<section>
+		<header>
 			<h2>Experience</h2>
+		</header>
 		<div>
 			<h3>The AAT Project - Computer Science &amp; Web Development Intern</h3>
 			<h4><i>New York, NY | 2015 - Present</i></h4>
@@ -93,7 +98,9 @@
 	<br><br>
 
 	<section>
-		<h2>Skills</h2>
+		<header>
+			<h2>Skills</h2>
+		</header>	
 		<div>
 			<h3>Programming</h3>
 			<ul>
@@ -115,10 +122,8 @@
 			<ul>
 				<li>Fluent in Tagalog</li>
 			</ul>
-		<div>				
-	</section>	
-
-	<a href="about.html"><h2>More About Me</h2></a>			
+		</div>				
+	</section>			
 
 
 </body>
