--- a/midterm/about.html
+++ b/midterm/about.html
@@ -7,16 +7,15 @@
 </head>
 <body>
 	<nav>
-		<ul>
-			<li><a href="#">Resume</a></li>
-			<li><a href="about.html">About</a></li>	
-		</ul>
+		<a href="resume.html">Resume</a>
+		<!-- a href="about.html">About</a -->	
 	</nav>
 	<header>
 		<h1>My Bio</h1>
 	</header>
-	
+
 	<img src="img/profile.jpg" alt="profile" class="center"/>
+	<br><br>
 
 	<div>
 	<p>First of all, you can call me Nina. I'm a Junior at <a href="https://www.fordham.edu/info/21454/lincoln_center_campus" target="_blank">Fordham University at Lincoln Center</a>. I'm majoring in Computer Science, double minoring in Mathematics and New Media &amp; Digital Design on an Engineering track (it's a mouthful I know). Originally, I was going into Computer Engineering but then I realized that I'm a lot more interested in software than I am in hardware. Furthermore, my appreciation for art and design has grown in the past couple of months, which led me to realize that I'm very much intrigued by the relationship between tech and design. Due to this, I want to concentrate on front-end development. I've seen that there are a number of web developers that don't really care much about the aesthetics of a website. On the other hand, there are also a lot of graphic designers that don't understand how code works, which lead them to design websites without realizing the complications of how code works.</p>
