--- a/midterm/resume.html
+++ b/midterm/resume.html
@@ -7,10 +7,8 @@
 </head>
 <body>
 	<nav>
-		<ul>
-			<li><a href="#">Resume</a></li>
-			<li><a href="about.html">About</a></li>	
-		</ul>
+		<!-- <a href="#">Resume</a> -->
+		<a href="about.html">About</a>
 	</nav>
 
 	<header>
@@ -31,7 +29,10 @@
 	</section>
 
 	<section>
-		<h2>Coursework</h2>
+		<header>
+			<h2>Coursework</h2>
+		</header>
+		<section>
 			<ul>
 				<li>C++ Programming I/II</li>
 				<li>Data Structures</li>
@@ -44,6 +45,7 @@
 				<li>Calculus I/II</li>
 				<li>Multivariate Calculus </li>
 			</ul>
+		</section>	
 	</section>		
 
 	<section>
@@ -81,13 +83,16 @@
 	</section>	
 
 	<section>
-		<h2>Projects</h2>
+		<header>
+			<h2>Projects</h2>
+		</header>	
 		<div>
 			<h3>Cryptr | iOS Application</h3>
 			<h4><i>CodePath University</i></h4>
 			<p>Cryptr uses the RSA algorithm to hash and sign plaintext messages. These messages contain information such as the name of the intended recipient, the event the ticket / ID is for, the date and an ID number. The app can also scan a QR code and verify identities as valid or invalid.</p>
 			<a href="http://www.bit.ly/git-cryptr">bit.ly/git-cryptr</a>
 		</div>	
+		<br>
 		<div>
 			<h3>Winston West Fine Art | Website</h3>
 			<h4><i>Freelance</i></h4>
