added midterm review comments

--- a/midterm/resume.html
+++ b/midterm/resume.html
@@ -24,6 +24,9 @@
 		<section>
 			<h3>Fordham University, New York, NY | May 2018</h3>
 			<p>Bachelor of Science in Computer Science</p>
+			<!--
+				YE - good html entities
+			-->
 			<p>Double Minor in Mathematics &amp; New Media and Digital Design</p>
 		</section>
 	</section>
@@ -43,8 +46,8 @@
 				<li>Digial Pghotography</li>
 				<li>Calculus I/II</li>
 				<li>Multivariate Calculus </li>
-			</ul>	
-	</section>		
+			</ul>
+	</section>
 
 	<section>
 		<header>
@@ -60,7 +63,7 @@
 				<li>Help the production team with brainstorming for content and filming interviews and short videos</li>
 			</ul>
 		</div>
-		<div>		
+		<div>
 			<h3>XRC Labs - Web Development Intern</h3>
 			<h4><i>New York, NY | May 2016 - August 2016</i></h4>
 			<ul>
@@ -76,20 +79,20 @@
 			<ul>
 				<li>Build an iOS application project weekly</li>
 				<li>Create and develop a new iOS application with a group at the end of the 12-week bootcamp</li>
-			</ul>	
-		</div>	
-	</section>	
+			</ul>
+		</div>
+	</section>
 
 	<section>
 		<header>
 			<h2>Projects</h2>
-		</header>	
+		</header>
 		<div>
 			<h3>Cryptr | iOS Application</h3>
 			<h4><i>CodePath University</i></h4>
 			<p>Cryptr uses the RSA algorithm to hash and sign plaintext messages. These messages contain information such as the name of the intended recipient, the event the ticket / ID is for, the date and an ID number. The app can also scan a QR code and verify identities as valid or invalid.</p>
 			<a href="http://www.bit.ly/git-cryptr">bit.ly/git-cryptr</a>
-		</div>	
+		</div>
 		<br>
 		<div>
 			<h3>Winston West Fine Art | Website</h3>
@@ -103,7 +106,7 @@
 	<section>
 		<header>
 			<h2>Skills</h2>
-		</header>	
+		</header>
 		<div>
 			<h3>Programming</h3>
 			<ul>
@@ -125,8 +128,8 @@
 			<ul>
 				<li>Fluent in Tagalog</li>
 			</ul>
-		</div>				
-	</section>			
+		</div>
+	</section>
 
 
 </body>
