--- a/assignment5/resume.html
+++ b/assignment5/resume.html
@@ -88,14 +88,14 @@
 			<h3>Cryptr | iOS Application</h3>
 			<h4><i>CodePath University</i></h4>
 			<p>Cryptr uses the RSA algorithm to hash and sign plaintext messages. These messages contain information such as the name of the intended recipient, the event the ticket / ID is for, the date and an ID number. The app can also scan a QR code and verify identities as valid or invalid.</p>
-			<a href="http://www.bit.ly/git-cryptr">bit.ly/git-cryptr</a>
+			<a href="http://www.bit.ly/git-cryptr" class="link">bit.ly/git-cryptr</a>
 		</div>	
 		<br>
 		<div>
 			<h3>Winston West Fine Art | Website</h3>
 			<h4><i>Freelance</i></h4>
 			<p>Winston West Fine Art Editions was founded by Bonnie Winston. This website showcases the works of various photographers who she helps represent.</p>
-			<a href="http://www.winstonwestfineart.com">winstonwestfineart.com</a>
+			<a href="http://www.winstonwestfineart.com" class="link">winstonwestfineart.com</a>
 		</div>
 	</section>
 	<br><br>
